--- a/src/app/fast-covid19-test/fast-covid19-test.component.html
+++ b/src/app/fast-covid19-test/fast-covid19-test.component.html
@@ -170,14 +170,14 @@
                         </mat-form-field>
                     </div>
                 </div>
-                <div class="col">
+                <!-- <div class="col">
                     <div class="form-group">
                         <mat-form-field>
                             <input matInput autocomplete="off" class="form-control" formControlName="MethodDesc"
                                 placeholder="תיאור קיט בטקסט" type="text" />
                         </mat-form-field>
                     </div>
-                </div>
+                </div> -->
                 <div class="col">
                     <div class="form-group">
                         <mat-form-field style="padding: 13px;">
