--- a/src/app/fast-covid-test-dashboard/fast-covid-test-dashboard.component.html
+++ b/src/app/fast-covid-test-dashboard/fast-covid-test-dashboard.component.html
@@ -5,15 +5,15 @@
         <div class="row">
             <div dir="rtl" class="card w-85-p">
                 <div class="card-body">
-                    <!-- <form class="form" [formGroup]="formSearch">
+                    <form class="form" [formGroup]="searchCovidTestPatients">
                         <div class="row">
-                            <div class="form-group mt-3 col-lg-8 col-sm-12 col-xs-12">
+                            <div class="form-group mt-3 col-lg-12 col-sm-12 col-xs-12">
                                 <mat-form-field>
                                     <input matInput formControlName="searchWord" autocomplete="off"
-                                        placeholder="חפש לפי שם שאלון" name="fliterVal" />
+                                        placeholder="חיפוש לפי תעודת זהות" type="number" name="fliterVal" />
                                 </mat-form-field>
                             </div>
-                            <div class="form-group mt-2 col-lg-4 col-sm-12">
+                            <!-- <div class="form-group mt-2 col-lg-4 col-sm-12">
                                 <mat-form-field appearance="fill">
                                     <mat-label>מחלקה</mat-label>
                                     <mat-select formControlName="departmentControl">
@@ -25,15 +25,15 @@
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
-                            </div>
+                            </div> -->
                         </div>
                         <button mat-raised-button type="submit"
-                            class="btn btn-primary btn-raised">
+                            class="btn btn-primary btn-raised" (click)="getAllAntigTestedPatients()">
                             <span class="material-icons">
                                 search
                             </span>
                         </button>
-                    </form> -->
+                    </form>
                 </div>
             </div>
         </div>
@@ -42,67 +42,53 @@
     <div dir="rtl">
         <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <!-- Position Column -->
-            <ng-container matColumnDef="FormID">
+            <ng-container matColumnDef="SampleDate">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מס' טופס
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך דגימה
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> </mat-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.SampleDate}}</mat-cell>
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="FormName">
+            <ng-container matColumnDef="IdNumber">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם טופס
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תעודת זהות
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="justify-content: center;text-align: center;">
-                   </mat-cell>
+                    {{element.IdNumber}}
+                </mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="formDepartment">
+            <ng-container matColumnDef="FullName">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> מחלקה
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> שם נבדק
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> 
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> {{element.FullName}}
                 </mat-cell>
             </ng-container>
 
             <!-- Weight Column -->
-            <ng-container matColumnDef="FormDate">
+            <ng-container matColumnDef="Result">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תאריך יצירת
-                    הטופס </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> </mat-cell>
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> תוצאה
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;">{{element.Result}} </mat-cell>
             </ng-container>
 
             <!-- Update Column -->
-            <ng-container matColumnDef="update">
+            <ng-container matColumnDef="QrCode">
                 <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> עדכון טופס
+                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> QRCode
                 </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                        color="accent"><span class="material-icons">
-                            edit
-                        </span></button> </mat-cell>
-            </ng-container>
-
-            <!-- Update Column -->
-            <ng-container matColumnDef="showAll">
-                <mat-header-cell *matHeaderCellDef
-                    style="font-size: 20px; background-color: rgb(235, 231, 231);justify-content: center;"> הצגת טופס
-                </mat-header-cell>
-                <mat-cell *matCellDef="let element" style="justify-content: center;"> <button mat-raised-button
-                        color="primary"><span
-                            class="material-icons">
-                            zoom_out_map
-                        </span></button> </mat-cell>
+                <mat-cell *matCellDef="let element" style="justify-content: center;"> <img [src]="element.QrCode"> </mat-cell>
             </ng-container>
 
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-        <button type="button" id="rolesDetailsBtn" mat-fab color="primary"><i
-                class="material-icons" matTooltip="טופס חדש">add</i></button>
+        <button type="button" id="rolesDetailsBtn" mat-fab color="primary"><i class="material-icons"
+                matTooltip="בדיקה חדשה" (click)="openNewTest()">add</i></button>
         <mat-paginator [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
     </div>
 </div>
